Add .gitignore, bump files

--- a/public/index.html
+++ b/public/index.html
@@ -16,26 +16,25 @@
           I'm a graduate student at Northwestern University studying programming
           languages. Right now, I'm working on making JavaScript and TypeScript
           more pleasant to write. Challenges working with those languages at
-          scale abound; I'm interested in making the web a simpler place.
+          scale abound, and I'm interested in making the web a simpler place.
+        </p>
+        <p>
+          My favorite language is LISP, and I want some dialect of it to spread.
+          I want as many people as possible to discover the joy of building
+          programs by writing down the syntax tree that represents them
+          directly. If you're interested in learning more, consider picking up
+          <a class="link" href="https://racket-lang.org">Racket</a>.
         </p>
         <p>
           I enjoy untangling dirty code and messy systems. Cleaning up technical
           debt may not seem glamarous, but I enjoy making the world more
           maintainable one program at a time.
         </p>
-        <p>
-          I also adore LISP and want some dialect of the language to spread. If
-          you're interested in learning more, consider starting with
-          <a class="link" href="https://racket-lang.org">Racket</a>. I want as
-          many people as possible to discover the joy of building programs by
-          writing down the syntax tree that represents them directly.
-        </p>
         <p>Other interests include:</p>
         <div class="list">
           <ul>
-            <li>Domain specific languages</li>
-            <li>Package management systems</li>
             <li>Symbolic AI</li>
+            <li>Contract systems</li>
             <li>Web development</li>
           </ul>
         </div>
