--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/index.css" />
     <title>joshuaharry.com</title>
   </head>
+
   <body>
     <div id="main">
       <h1 id="title">Hello, world!</h1>
@@ -19,11 +20,15 @@
           scale abound, and I'm interested in making the web a simpler place.
         </p>
         <p>
-          My favorite language is LISP, and I want some dialect of it to spread.
-          I want as many people as possible to discover the joy of building
-          programs by writing down the syntax tree that represents them
-          directly. If you're interested in learning more, consider picking up
-          <a class="link" href="https://racket-lang.org">Racket</a>.
+          My favorite language is
+          <a class="link" href="https://racket-lang.org">Racket</a>. All
+          dialects of LISP make me happy; I want as many people as possible to
+          discover the joy of building programs by writing down the syntax tree
+          that represents them directly. If you're interested in learning more,
+          consider reading
+          <a class="link" href="https://htdp.org">How to Design Programs</a>,
+          which is a fantastic introduction to both programming and computer
+          science.
         </p>
         <p>
           I enjoy untangling dirty code and messy systems. Cleaning up technical
@@ -34,8 +39,8 @@
         <div class="list">
           <ul>
             <li>Symbolic AI</li>
-            <li>Contract systems</li>
             <li>Web development</li>
+            <li>Computer history</li>
           </ul>
         </div>
         <p>
