--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,9 @@
         <p>
           I'm a graduate student at Northwestern University studying programming
           languages. Right now, I'm working on making JavaScript and TypeScript
-          more pleasant to write. Challenges working with those languages at
-          scale abound, and I'm interested in making the web a simpler place.
+          more pleasant to write. Challenges building software with those
+          languages at scale abound, and I'm interested in making the web a
+          simpler place.
         </p>
         <p>
           My favorite language is
