--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="description" content="Joshua Harry Hoeflich's website." />
+    <link rel="preload" href="/css/index.css" as="style" />
     <link rel="stylesheet" href="/css/index.css" />
     <title>joshuaharry.com</title>
   </head>
-
   <body>
     <div id="main">
       <h1 id="title">Hello, world!</h1>
-      <img id="me" src="/img/josh.jpg" />
+      <img id="me" alt="An image of Joshua Harry Hoeflich" src="/img/josh.jpg" />
       <h2 id="subtitle">Welcome to Joshua Harry Hoeflich's website.</h2>
       <div id="content">
         <p>
