--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,13 @@
   <body>
     <div id="main">
       <h1 id="title">Hello, world!</h1>
-      <img id="me" alt="An image of Joshua Harry Hoeflich" src="/img/josh.jpg" />
+      <img
+        id="me"
+        width="250px"
+        height="250px"
+        alt="An image of Joshua Harry Hoeflich"
+        src="/img/josh.webp"
+      />
       <h2 id="subtitle">Welcome to Joshua Harry Hoeflich's website.</h2>
       <div id="content">
         <p>
