Updates first paragraph

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,12 @@
       <h2 id="subtitle">Welcome to Joshua Harry Hoeflich's website.</h2>
       <div id="content">
         <p>
-          I'm a graduate student at Northwestern University studying programming
-          languages. Right now, I'm working on making JavaScript and TypeScript
-          more pleasant to write. Challenges building software with those
-          languages at scale abound, and I'm interested in making the web a
-          simpler place.
+          I'm a software engineer at Northwestern University who helps
+          researchers at Adobe and our computer science department analyze
+          natural language models by putting them online. I also work with some
+          programming language researchers on contract systems, JavaScript, and
+          TypeScript. Web development fascinates me, and I love building systems
+          for other people to use.
         </p>
         <p>
           My favorite language is
