--- a/public/index.html
+++ b/public/index.html
@@ -13,49 +13,26 @@
       <h1 id="title">Hello, world!</h1>
       <img
         id="me"
-        width="250px"
-        height="250px"
+        width="200px"
+        height="200px"
         alt="An image of Joshua Harry Hoeflich"
         src="/img/josh.webp"
       />
       <h2 id="subtitle">Welcome to Joshua Harry Hoeflich's website.</h2>
       <div id="content">
         <p>
-          I'm a software engineer at Northwestern University who helps
-          researchers at Adobe and our computer science department analyze
-          natural language models by putting them online. I also work with some
-          programming language researchers on contract systems, JavaScript, and
-          TypeScript. Web development fascinates me, and I love building systems
-          for other people to use.
+          I'm a software engineer building tools for the web with researchers
+          and developers at Northwestern, Adobe, and the University of Maryland.
+          In my spare time, I like to research programming languages. I love
+          building systems for other people to use; I enjoy untangling dirty
+          code and messy systems. Cleaning up technical debt may not seem
+          glamarous, but I want to make the world more maintainable one program
+          at a time.
         </p>
-        <p>
-          My favorite language is
-          <a class="link" href="https://racket-lang.org">Racket</a>. All
-          dialects of LISP make me happy; I want as many people as possible to
-          discover the joy of building programs by writing down the syntax tree
-          that represents them directly. If you're interested in learning more,
-          consider reading
-          <a class="link" href="https://htdp.org">How to Design Programs</a>,
-          which is a fantastic introduction to both programming and computer
-          science.
-        </p>
-        <p>
-          I enjoy untangling dirty code and messy systems. Cleaning up technical
-          debt may not seem glamarous, but I enjoy making the world more
-          maintainable one program at a time.
-        </p>
-        <p>Other interests include:</p>
-        <div class="list">
-          <ul>
-            <li>Symbolic AI</li>
-            <li>Web development</li>
-            <li>Computer history</li>
-          </ul>
-        </div>
         <p>
           Before becoming a developer, I wanted to work as a high-school English
-          teacher. I'm a big fan of Russian literature, English education, and
-          musical theatre.
+          teacher. I enjoy skiing, bookstores, swimming, cozy fireplaces, and
+          the occasional game of Magic: The Gathering with friends.
         </p>
         <p>
           If you'd like to get in touch, feel free to email me at
