--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,10 @@
     <meta name="description" content="Joshua Harry Hoeflich's website." />
     <link rel="preload" href="/css/index.css" as="style" />
     <link rel="stylesheet" href="/css/index.css" />
-    <title>joshuaharry.com</title>
+    <title>Joshua Hoeflich</title>
   </head>
   <body>
     <div id="main">
-      <h1 id="title">Hello, world!</h1>
       <img
         id="me"
         width="200px"
@@ -18,11 +17,11 @@
         alt="An image of Joshua Harry Hoeflich"
         src="/img/josh.webp"
       />
-      <h2 id="subtitle">Welcome to Joshua Harry Hoeflich's website.</h2>
+      <h2 id="subtitle">Hi, there! I'm Josh. Nice to meet you.</h2>
       <div id="content">
         <p>
           I'm a software engineer building tools for the web with researchers
-          and developers at Northwestern, Adobe, and the University of Maryland.
+          and developers at Adobe, Northwestern, and the University of Maryland.
           In my spare time, I like to research programming languages. I love
           building systems for other people to use; I enjoy untangling dirty
           code and messy systems. Cleaning up technical debt may not seem
@@ -35,7 +34,7 @@
           the occasional game of Magic: The Gathering with friends.
         </p>
         <p>
-          If you'd like to get in touch, feel free to email me at
+          If you'd like to get in touch, please email me at
           <a class="link" href="mailto:joshuahoeflich2021@u.northwestern.edu"
             >joshuahoeflich2021@u.northwestern.edu</a
           >. Have an excellent day.
