Switches to icloud email

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
           <a class="bar-item" href="/resume.pdf">Resume</a>
           <a
             class="bar-item"
-            href="mailto:joshuahoeflich2021@u.northwestern.edu"
+            href="mailto:joshuaharry411@icloud.com"
             >Email</a
           >
         </div>
